--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,9 @@
 h1{
-    background-clip: rgb(69, 129, 69);
+    background-color: rgb(69, 129, 69);
     font-size: 200%;
+    color: azure;
+}
+body{
+    background-color: rgb(48, 48, 48);
+    color: azure;
 }
